RANGER-871 - Fix Migrating issues
Signed-off-by: Madhan Neethiraj <madhan@apache.org>